%% ERD (Entity Relationship Diagram) for FastFood Application
%% Complete database schema with all relationships and constraints

erDiagram
    %% Core User Management
    USERS {
        int id PK "Primary key - User identifier"
        varchar username UK "Unique username for login"
        varchar password "Hashed password (bcrypt recommended)"
        varchar fullname "Full display name"
        varchar phone "Phone number for contact/delivery"
        varchar email UK "Unique email address"
        text address "Delivery address"
        varchar role "Role: buyer, admin, staff"
        timestamp created_at "Account creation timestamp"
        timestamp updated_at "Last profile update"
    }

    %% Product Catalog
    CATEGORIES {
        int id PK "Category identifier"
        varchar name UK "Category name (Burger, Chicken, Fries)"
        text description "Category description"
        varchar image "Category image URL"
        boolean active "Is category active/visible"
        int sort_order "Display order"
        timestamp created_at
    }

    PRODUCTS {
        int id PK "Product identifier"
        varchar name "Product display name"
        varchar slug UK "URL-friendly product identifier"
        text description "Product description"
        decimal price "Product price (VND)"
        varchar image "Product image URL"
        int category_id FK "Reference to categories.id"
        boolean available "Product availability status"
        int stock_quantity "Available stock (if tracking)"
        decimal discount_price "Discounted price (optional)"
        timestamp created_at
        timestamp updated_at
    }

    %% Shopping Cart (Session-based)
    CARTS {
        int id PK "Cart item identifier"
        int user_id FK "Reference to users.id"
        int product_id FK "Reference to products.id"
        int quantity "Quantity of this product in cart"
        timestamp created_at "When item was added to cart"
        timestamp updated_at "Last quantity update"
    }

    %% Order Management
    ORDERS {
        varchar id PK "UUID order identifier"
        int user_id FK "Reference to users.id (nullable for guest orders)"
        decimal total_amount "Total order value (VND)"
        varchar status "pending, confirmed, processing, completed, cancelled, failed"
        varchar payment_method "cod, momo, bank_transfer"
        varchar payment_status "pending, processing, completed, failed, refunded"
        varchar customer_name "Customer name for delivery"
        varchar customer_phone "Customer phone for delivery"
        text customer_address "Delivery address"
        text delivery_notes "Special delivery instructions"
        timestamp created_at "Order creation time"
        timestamp updated_at "Last status update"
        timestamp confirmed_at "When order was confirmed"
        timestamp completed_at "When order was completed"
    }

    ORDER_ITEMS {
        int id PK "Order item identifier"
        varchar order_id FK "Reference to orders.id"
        int product_id FK "Reference to products.id"
        int quantity "Quantity ordered"
        decimal unit_price "Price per unit at time of order"
        decimal total_price "quantity × unit_price"
        text special_requests "Special preparation requests"
        timestamp created_at
    }

    %% Payment Tracking
    PAYMENTS {
        int id PK "Payment record identifier"
        varchar order_id FK "Reference to orders.id"
        varchar payment_id UK "External payment provider ID"
        varchar provider "momo, vnpay, bank_transfer"
        varchar method "qr_code, app, web, cash"
        decimal amount "Payment amount (VND)"
        varchar currency "VND"
        varchar status "pending, processing, success, failed, cancelled, refunded"
        text provider_response "Full response from payment provider (JSON)"
        varchar transaction_reference "Provider transaction reference"
        timestamp created_at "Payment initiation time"
        timestamp updated_at "Last status update"
        timestamp completed_at "Payment completion time"
    }

    %% Order Status History (Optional - for tracking)
    ORDER_STATUS_HISTORY {
        int id PK
        varchar order_id FK "Reference to orders.id"
        varchar status "Status value"
        varchar changed_by "User ID who changed status"
        text notes "Status change notes"
        timestamp created_at "When status was changed"
    }

    %% User Sessions (Optional - for better auth tracking)
    USER_SESSIONS {
        varchar id PK "Session token"
        int user_id FK "Reference to users.id"
        varchar device_info "Device/browser info"
        varchar ip_address "Client IP address"
        timestamp created_at "Session start"
        timestamp expires_at "Session expiry"
        timestamp last_activity "Last session activity"
    }

    %% Product Reviews (Future enhancement)
    PRODUCT_REVIEWS {
        int id PK
        int product_id FK "Reference to products.id"
        int user_id FK "Reference to users.id"
        int rating "Rating 1-5 stars"
        text comment "Review text"
        boolean verified_purchase "Was this a verified purchase"
        timestamp created_at
    }

    %% Relationships with Cardinality
    USERS ||--o{ ORDERS : "places (user can have multiple orders)"
    USERS ||--o{ CARTS : "has (user can have multiple cart items)"
    USERS ||--o{ USER_SESSIONS : "has (user can have multiple sessions)"
    USERS ||--o{ PRODUCT_REVIEWS : "writes (user can review multiple products)"
    
    CATEGORIES ||--o{ PRODUCTS : "contains (category can have multiple products)"
    
    PRODUCTS ||--o{ ORDER_ITEMS : "ordered_in (product can be in multiple orders)"
    PRODUCTS ||--o{ CARTS : "added_to (product can be in multiple carts)"
    PRODUCTS ||--o{ PRODUCT_REVIEWS : "receives (product can have multiple reviews)"
    
    ORDERS ||--|{ ORDER_ITEMS : "contains (order must have at least one item)"
    ORDERS ||--o{ PAYMENTS : "has (order can have multiple payment attempts)"
    ORDERS ||--o{ ORDER_STATUS_HISTORY : "tracked_in (order status changes)"

    %% Business Rules & Constraints (Comments)
    %% 1. Cart items are temporary - cleared after successful order
    %% 2. Orders use UUID for better security and external API integration
    %% 3. Payment records keep full provider response for audit trail
    %% 4. Order status follows: pending → confirmed → processing → completed
    %% 5. Guest orders allowed (user_id can be null) with customer info in orders table
    %% 6. Product prices stored in order_items for historical accuracy
    %% 7. Soft delete recommended for users, products (add deleted_at column)

    %% Entity Styling
    classDef coreEntity fill:#e3f2fd,stroke:#1976d2,stroke-width:3px,color:#000
    classDef catalogEntity fill:#e8f5e8,stroke:#388e3c,stroke-width:2px,color:#000
    classDef transactionEntity fill:#f3e5f5,stroke:#7b1fa2,stroke-width:2px,color:#000
    classDef auditEntity fill:#fff3e0,stroke:#ef6c00,stroke-width:2px,color:#000
    classDef futureEntity fill:#fafafa,stroke:#9e9e9e,stroke-width:1px,color:#666

    class USERS,ORDERS coreEntity
    class CATEGORIES,PRODUCTS catalogEntity
    class CARTS,ORDER_ITEMS,PAYMENTS transactionEntity
    class ORDER_STATUS_HISTORY,USER_SESSIONS auditEntity
    class PRODUCT_REVIEWS futureEntity